--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/stack": "^7.2.10",
-    "expo": "^52.0.46",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.9",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
     "formik": "^2.4.6",
     "nativewind": "latest",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-svg": "15.8.0",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
     "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "^19.1.3",
     "@types/react-native": "^0.72.8",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
@@ -39,7 +40,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "eslintConfig": {
     "extends": "universe/native",
