--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.12",
+    "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.2.10",
     "expo": "^53.0.9",
     "expo-splash-screen": "~0.30.8",
